# check

./: .clang-format  ALBORZ_license.doc  CMakeLists.txt  LICENSE  README.md
TGV3D_reaction_species/: Flow.stl  H2_williams_12.yaml
scripts/: extract_field.py  fix_vtkhdf.py  generate_decompositions.py  profile.sh  read_hdf_example.py  update_tensor_syntax.py
src/: ALBORZ_GlobalVariables.cpp  ALBORZ_GlobalVariables.h  ALBORZ_Macros.h  ALBORZ_SETTINGS.h  Average_field.cpp  Average_field.h  CANTERA_INTERFACE.cpp  CANTERA_INTERFACE.h  Flow_solver.cpp  Flow_solver.h  Fluid_read_write.cpp  Fluid_read_write.h  Geometry.cpp  Geometry.h  LMNA Paper.cpp  Lattice_ops.cpp  Lattice_ops.h  Loop.cpp  Loop.h  Non_newtonian_models.cpp  Non_newtonian_models.h  Notes.cpp  Parallel.cpp  Parallel.h  Particle_sim.cpp  Particle_sim.h  Phase_Field.cpp  Phase_Field.h  Point_particles.cpp  Point_particles.h  REGATH_INTERFACE.h  SectionalSolver.cpp  SectionalSolver.h  Species_solver.cpp  Species_solver.h  Tensor.h  Thermal_solver.cpp  Thermal_solver.h  Vec.h  main.cpp  (+3 more)
src/details/: Flow_solver_lbm.cpp
src/io/: H5_ALB.cpp  H5_ALB.h  IO_common.h  IO_interface.cpp  IO_interface.h  VTK_ALB.cpp  VTK_ALB.h
src/simulations/: Loop_flow_crystal.cpp  Loop_flow_crystal.h  Loop_flow_heat_full_lb.cpp  Loop_flow_heat_full_lb.h  Loop_flow_particle.cpp  Loop_flow_particle.h  Loop_flow_reactive.cpp  Loop_flow_reactive.h
src/utils/: Assert.cpp  Assert.h  Config_utils.cpp  Config_utils.h  Debug_trap.h  Meta_prog_utils.h  Timer.cpp  Timer.hpp
